--- a/backend/yeb-server/pom.xml
+++ b/backend/yeb-server/pom.xml
@@ -45,6 +45,15 @@
       <version>3.13.0</version>
     </dependency>
 
+
+    <!-- 生成验证码 -->
+    <dependency>
+      <groupId>com.github.axet</groupId>
+      <artifactId>kaptcha</artifactId>
+      <version>0.0.9</version>
+    </dependency>
+
+
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
